<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.waractivitycontroller.view.activity.AddPlayerActivity">

    <EditText
        android:id="@+id/activity_add_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/activity_add_player_name" />

    <EditText
        android:id="@+id/activity_add_player_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_add_player_name"
        android:hint="@string/activity_add_player_level"
        android:inputType="number" />

    <EditText
        android:id="@+id/activity_add_player_day"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_add_player_level"
        android:gravity="center"
        android:hint="@string/activity_add_player_day"
        android:inputType="number" />

    <TextView
        android:id="@+id/activity_add_player_divider1"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_player_level"
        android:layout_toEndOf="@+id/activity_add_player_day"
        android:layout_toRightOf="@+id/activity_add_player_day"
        android:text="@string/activity_add_player_divider1" />

    <EditText
        android:id="@+id/activity_add_player_month"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_player_level"
        android:layout_toEndOf="@+id/activity_add_player_divider1"
        android:layout_toRightOf="@+id/activity_add_player_divider1"
        android:gravity="center"
        android:hint="@string/activity_add_player_month"
        android:inputType="number" />

    <TextView
        android:id="@+id/activity_add_player_divider2"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_player_level"
        android:layout_toEndOf="@+id/activity_add_player_month"
        android:layout_toRightOf="@+id/activity_add_player_month"
        android:text="@string/activity_add_player_divider2" />

    <EditText
        android:id="@+id/activity_add_player_year"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_player_level"
        android:layout_toEndOf="@+id/activity_add_player_divider2"
        android:layout_toRightOf="@+id/activity_add_player_divider2"
        android:gravity="center"
        android:hint="@string/activity_add_player_year"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_player_button"
        android:layout_below="@+id/activity_add_player_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onAddPlayer"
        android:id="@+id/activity_add_player_button"/>
</RelativeLayout>
